--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>What is Git?</title>
 </head>
 <body>
-    
+    <h1>Welcome to Git Overview</h1>
+    <p>This page provides a brief introduction to Git, a powerful version control system.</p
+    <h2>What is Git?<h2>
+    <p>Git is a distributed version control system used to track changes in source code during software development. It allows multiple developers to collaborate, manage code history, and revert to previous versions efficiently.</p>
 </body>
 </html>
