poupravil jsem text o gitu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Welcome to Git Overview</h1>
     <p>This page provides a brief introduction to Git, a powerful version control system.</p>
     <h2>What is Git?</h2>
-    <p>Git is a distributed version control system used to track changes in source code during software development. It allows multiple developers to collaborate, manage code history, and revert to previous versions efficiently.</p>
+    <p>Git is like the save feature in a video game. Just as you save your progress to avoid losing your achievements, Git lets you save snapshots of your code. If something goes wrong, you can load a previous save and continue working without losing your progress, just like in a game. But Git also lets multiple people work together and explore different strategies using branches, so everyone can collaborate and try new ideas without losing progress.</p>
 </body>
 </html>
