--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <p>Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
 
-    <h2>What is Git?</h2>
+    <h2>What Be This Git?</h2>
 
-    <p>Git is like the save feature in a video game. Just as you save your progress to avoid losing your achievements, Git lets you save snapshots of your code. If something goes wrong, you can load a previous save and continue working without losing your progress, just like in a game. But Git also lets multiple people work together and explore different strategies using branches, so everyone can collaborate and try new ideas without losing progress.</p>
+    <p>Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
 
 </body>
 </html>
