--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+     <div class="torch left">
+        <div class="torch-flame"></div>
+        <div class="torch-stick"></div>
+    </div>
+    <div class="torch right">
+        <div class="torch-flame"></div>
+        <div class="torch-stick"></div>
+    </div>
+
     <div class="glass-medieval">   
 
         <h1>Greetings, Noble Visitor!</h1>
