--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
 
-            <h1>Greetings, Noble Visitor!</h1>
+<div class="d-flex flex-column justify-content-center w-100 h-100">
 
-            <p>Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <div class="btn-group my-5">
+      
+  </div>
+</div>
+</div>
+
+    <h1>Greetings, Noble Visitor!</h1>
+
+            <p class="narrow-text">Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
 
             <h2>What Be This Git?</h2>
 
-            <p>Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
+            <p class="narrow-text">Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
 
             <h2>What Be This Bloody GitHub, Then!?</h2>
 
-            <p>’Tis a grand gathering place, much like ye local tavern, where coders from far and wide bring forth their scrolls and tomes of code. Here, one may squabble, jest, and collaborate, sharing wisdom and folly alike. Should ye wish to join the fray, simply hoist your code upon GitHub’s mighty shelves and let the merry chaos commence!</p>
+            <p class="narrow-text">’Tis a grand gathering place, much like ye local tavern, where coders from far and wide bring forth their scrolls and tomes of code. Here, one may squabble, jest, and collaborate, sharing wisdom and folly alike. Should ye wish to join the fray, simply hoist your code upon GitHub’s mighty shelves and let the merry chaos commence!</p>
 
     
 </body>
