změnil jsem text nadpisu h2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <p class="narrow-text">Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
 
-    <h2>What Be This Git?</h2>
+    <h2>What Foul Sorcerer's Jest Be This Git?</h2>
 
         <p class="narrow-text">Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
 
