odstranil jsem KCD2 foto, přidal text do index.html a v ccs vytvořil pravidlo pro všechny p

--- a/index.html
+++ b/index.html
@@ -19,16 +19,25 @@
 
     <h1>Greetings, Noble Visitor!</h1>
 
-            <p class="narrow-text">Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
+            <p>Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
 
     <h2>What Foul Sorcerer's Jest Be This Git?</h2>
 
-        <p class="narrow-text">Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
+        <p>Git is akin to a scribe’s ledger in a grand castle. As a wise knight records each triumph and trial in his journal, so does Git preserve every chapter of your code’s tale. Should calamity befall your quest, you may consult the chronicles and restore a former glory, continuing your journey unscathed. Moreover, Git grants fellowship among coders, allowing many to pen their own verses upon separate scrolls, exploring new paths and strategies, all whilst safeguarding the legacy of your code.</p>
 
     <h3>What Be This Bloody GitHub, Then!?</h3>
 
-        <p class="narrow-text">’Tis a grand gathering place, much like ye local tavern, where coders from far and wide bring forth their scrolls and tomes of code. Here, one may squabble, jest, and collaborate, sharing wisdom and folly alike. Should ye wish to join the fray, simply hoist your code upon GitHub’s mighty shelves and let the merry chaos commence!</p>
+        <p >’Tis a grand gathering place, much like ye local tavern, where coders from far and wide bring forth their scrolls and tomes of code. Here, one may squabble, jest, and collaborate, sharing wisdom and folly alike. Should ye wish to join the fray, simply hoist your code upon GitHub’s mighty shelves and let the merry chaos commence!</p>
 
-    
+    <h3>How Doth Git Prevent Overwriting?</h3>
+
+        <p>Hark! Thou hast queried upon the mysteries of Git in the realm of many knights scribbling upon the same scroll—five bold coders, say, each wielding their quills o'er the selfsame project, lest they trample one another's verses with reckless commits like "git commit -am 'text'". Fear not, for Git, that foul sorcerer's jest, doth not outright bar the gates 'gainst overwriting, but armeth thee with branches, merges, and conflict wards to avert calamity, much like King Arthur's knights questing apart ere uniting at the Round Table (sans the killer rabbits, perchance). 'Tis a distributed spellbook, where each coder toilest upon their own local copy, committing changes in peace, yet when pushing to the shared repository, Git demandeth harmony through pulls and merges. Behold, a tale of how it guardeth 'gainst mutual overwriting, spun in steps most merry and absurd:First, each coder cloneth the repository to their own castle (git clone), creating a full local mirror. They then forge their own branch for their labors—say, "git checkout -b my-quest-branch"—to scribble changes without befouling the master branch, akin to a knight venturing on a side quest for the Grail whilst others chase dragons. Commits here (git commit -am "My folly") affect only thy local ledger, no harm to fellows' work. </p>
+
+        <p><br>Should two knights alter the same parchment line—verily, the same file in conflicting ways—Git detecteth this upon merging branches. One pusheth their branch to the remote (git push origin my-quest-branch), then requesteth a merge (via pull request in GitHub's halls, or git merge locally). If no strife, Git blendeth changes swiftly, like a fast-forward o'er a bridge of death. But if conflict ariseth—lo, the same line tweaked differently!—Git halteth the merge, marking the file with runes of discord (<<<<<<< HEAD, =======, >>>>>>> other-branch), bidding thee resolve it by hand, editing the scroll to choose the wiser verse, then staging (git add) and committing the peace. Thus, naught is overwritten blindly; thou must confront the beast and slay it thyself, perchance with a holy mergetool (git mergetool) for visual aid. </p>
+
+        <p><br>To forestall such clashes oft, wise coders modularize the quest—assign realms so knights toil on disparate files or sections, pulling oft (git pull) to stay abreast of others' deeds, and communicating via missives or carrier pigeons (or Slack, in modern parlance). If one forgetteth to pull afore pushing, Git rebuketh thee with "non-fast-forward" error, demanding thou pull and merge first, lest thy changes be lost in the void. 'Tis no perfect shield—conflicts may yet bite like a voracious bunny—but Git ensurath that overwriting cometh not unbidden; it forceth thee to gaze upon the chaos and mend it, preserving all tales in the chronicles of history.In sum, Git preventeth wholesale overwriting by decentralizing the toil (local commits), isolating quests (branches), and enforcing resolution (merge conflicts), turning potential overwriting into a merry dance of collaboration. Prithee, venture forth with "git branch" and "git merge", and may thy commits be ever fruitful!</p>
+
+
+
 </body>
 </html>
