přidal jsem navbar

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 
   <div class="d-flex flex-column justify-content-center align-items-center">
     <div class="btn-group my-5">
-      
+      </div>
   </div>
 </div>
-</div>
+
+<menu class="navbar">
+    <ul>
+        <li><a href="index.html">Git</a></li>
+        <li><a href="about.html">NEXT</a></li>
+        <li><a href="contact.html">NEXXT</a></li>
+    </ul>
+</menu>
 
     <h1>Greetings, Noble Visitor!</h1>
 
