úprava css, přidán glass efekt, navbar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </menu>
 
     <h1>Greetings, Noble Visitor!</h1>
-
+<div class="git_obrazek">
+  <img src="gitpic-removebg-preview.png" alt="GitCedule">
+</div>
             <p>Embark upon a quest to uncover the mysteries of Git, a trusty tool for safeguarding and stewarding your code.</p>
 
     <h2>What Foul Sorcerer's Jest Be This Git?</h2>
@@ -44,7 +46,9 @@
 
         <p><br>To forestall such clashes oft, wise coders modularize the quest—assign realms so knights toil on disparate files or sections, pulling oft (git pull) to stay abreast of others' deeds, and communicating via missives or carrier pigeons (or Slack, in modern parlance). If one forgetteth to pull afore pushing, Git rebuketh thee with "non-fast-forward" error, demanding thou pull and merge first, lest thy changes be lost in the void. 'Tis no perfect shield—conflicts may yet bite like a voracious bunny—but Git ensurath that overwriting cometh not unbidden; it forceth thee to gaze upon the chaos and mend it, preserving all tales in the chronicles of history.In sum, Git preventeth wholesale overwriting by decentralizing the toil (local commits), isolating quests (branches), and enforcing resolution (merge conflicts), turning potential overwriting into a merry dance of collaboration. Prithee, venture forth with "git branch" and "git merge", and may thy commits be ever fruitful!</p>
 
-
+<div class="rytir_obrazek">
+  <img src="knight-removebg-preview.png" alt="GitCedule">
+</div>
 
 </body>
 </html>
